# adversarial_audio

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
analysis/33711__acclivity__excessiveexposure/1_transcribe_audio/: transcription_nova-3.json
analysis/33711__acclivity__excessiveexposure/3_optimize_audio/exp_2025-05-22_11-45-39/: config.json  transcription_after.json  transcription_before.json
analysis/33711__acclivity__excessiveexposure/3_optimize_audio/whisper-small-mlx/: transcription_after.json
analysis/33711__acclivity__excessiveexposure/4_modify_audio/exp_2025-05-22_11-46-09/: config.json  transcription_after.json
mlx_audio_opt/: experiment.py  file_io.py
mlx_audio_opt/audio/: istft.py  spectrogram.py  stft.py
mlx_audio_opt/experiment/: adversarial_audio_experiment.py  change_sentence_experiment.py  run.py
mlx_audio_opt/stt/: deepgram.py  transcription.py  whisper.py
mlx_audio_opt/visualization/: display_audio_player.py  plot_audio.py  plot_transcription.py  print_tokens.py
scripts/: 1_transcribe_audio.py  2_visualize_audio.py  3_optimize_audio.py  4_generate_audio.py  4_modify_audio.py  compare_transcriptions.py
tests/: test_file_io.py
tests/audio/: test_istft.py  test_spectrogram.py  test_stft.py
